index 네비게이션 수정 , contact 내용 추가 , about 화면 추가

--- a/index.html
+++ b/index.html
@@ -83,11 +83,15 @@
         height: 4rem;
         overflow: hidden;
         margin: 0;
+        color: black
     }
     .main-navigation {
         flex-grow: 1;
         text-align: right;
-
+        color: black;
+    }
+    .menu {
+        color: black;
     }
 
 
@@ -99,14 +103,14 @@
         <header id="header" role="banner">
             <div class="logo">
                 <a href="https://christine0916.github.io/" rel="home">
-                    <p class="site-title">CHRISTINE</p>
+                    <p class="site-title">Yoon Hyun Jin</p>
     			</a>
             </div>
             <nav id="site-navigation" class="main-navigation" role="navigation">
                     <ul class="nav navbar-nav navbar-right">
-                        <li><a href="/about">About</a></li>
-                        <li><a href="https://christine0916.github.io/">Work</a></li>
-                        <li><a href="/login">Contact</a></li>
+                        <li class="menu"><a href="https://christine0916.github.io/about">About</a></li>
+                        <li class="menu"><a href="https://christine0916.github.io/">Work</a></li>
+                        <li class="menu"><a href="/contact">Contact</a></li>
                     </ul>
             </nav>
         </header>
