--- a/contact.html
+++ b/contact.html
@@ -99,43 +99,10 @@
     <div class="container">
         <div class="group">
             <div class="title-text first">
-                Yoon Hyun Jin
+                Email
             </div>
             <div class="sub-text">
-                Illustrator, UI/UX Designer
-            </div>
-        </div>
-
-        <div class="group">
-            <div class="title-text">
-                Education
-            </div>
-            <div class="sub-text">
-                2009-2010 남서울 대학교 시각디자인학과<br>
-                2012-2013 수원대학교(편입) 커뮤니케이션디자인학과<br>
-                2014 수원대학교 수석 졸업
-            </div>
-        </div>
-
-        <div class="group">
-            <div class="title-text">
-                Work Experience
-            </div>
-            <div class="sub-text">
-                2014.04~10 NHN 캠프모바일  도돌 컨텐츠 디자인캠프 디자이너<br>
-                2015.01~ 07 콜론디(colondee) UI 디자이너<br>
-                2015.01~12 다국어 한국 전래동화 잡지 다모니 1,2,3,4호 원화가<br>
-                2015.08~2016.07 터크앤컴퍼니(Tuck and company) UI 디자이너
-            </div>
-        </div>
-
-        <div class="group">
-            <div class="title-text">
-                Awards
-            </div>
-            <div class="sub-text">
-                2012.09 제 2회 토프레소 컵 디자인 공모전 특별상
-                2014.02 수원대학교 우등상
+                aaung7746@gmail.com
             </div>
         </div>
     </div>
