이미지추가,수정

--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
                     <ul class="nav navbar-nav navbar-right">
                         <li class="menu"><a href="https://christine0916.github.io/about">About</a></li>
                         <li class="menu"><a href="https://christine0916.github.io/">Work</a></li>
-                        <li class="menu"><a href="/contact">Contact</a></li>
+                        <li class="menu"><a href="https://christine0916.github.io/contact">Contact</a></li>
                     </ul>
             </nav>
         </header>
@@ -119,17 +119,17 @@
             <ul>
                 <li class="card">
                     <a href="https://christine0916.github.io/">
-                        <img src="http://s3-us-west-2.amazonaws.com/s.cdpn.io/4273/cinderella.jpg">
+                        <img src="https://christine0916.github.io/img/ray_willy_mory.png">
                     </a>
                 </li>
                 <li class="card">
                     <a href="https://christine0916.github.io/">
-                        <img src="https://soomgo.s3.ap-northeast-2.amazonaws.com/static/img/home/index_thumbnail_1.png">
+                        <img src="https://christine0916.github.io/img/cover_2.png">
                     </a>
                 </li>
                 <li class="card">
                     <a href="https://christine0916.github.io/">
-                        <img src="http://s3-us-west-2.amazonaws.com/s.cdpn.io/4273/cinderella.jpg">
+                        <img src="https://christine0916.github.io/img/ssdam_thumbnail.png">
                     </a>
                 </li>
                 <li class="card">
