이미지명 수정

--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
                 </li>
                 <li class="card">
                     <a href="https://christine0916.github.io/">
-                        <img src="https://christine0916.github.io/img/cover_2.png">
+                        <img src="https://christine0916.github.io/img/ssdam_illust_thumbnail.png">
                     </a>
                 </li>
                 <li class="card">
