이미지추가

--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
                 </li>
                 <li class="card">
                     <a href="https://christine0916.github.io/">
-                        <img src="http://s3-us-west-2.amazonaws.com/s.cdpn.io/4273/cinderella.jpg">
+                        <img src="http://s3-us-west-2.amazonaws.com/s.cdpn.io/4273/six_thubmail.png">
                     </a>
                 </li>
                 <li class="card">
