이미지수정

--- a/contact.html
+++ b/contact.html
@@ -47,6 +47,7 @@
         height: 4rem;
         overflow: hidden;
         margin: 0;
+        color: black;
     }
     .main-navigation {
         flex-grow: 1;
