--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
                 </li>
                 <li class="card">
                     <a href="https://christine0916.github.io/">
-                        <img src="https://christine0916.github.io/img/six_thubmail.png">
+                        <img src="https://christine0916.github.io/img/six_thumbnail.png">
                     </a>
                 </li>
                 <li class="card">
