이미지경로 수정

--- a/index.html
+++ b/index.html
@@ -119,32 +119,32 @@
             <ul>
                 <li class="card">
                     <a href="https://christine0916.github.io/">
-                        <img src="https://christine0916.github.io/img/ray_willy_mory.png">
+                        <img src="./img/ray_willy_mory.png">
                     </a>
                 </li>
                 <li class="card">
                     <a href="https://christine0916.github.io/">
-                        <img src="https://christine0916.github.io/img/ssdam_illust_thumbnail.png">
+                        <img src="./img/ssdam_illust_thumbnail.png">
                     </a>
                 </li>
                 <li class="card">
                     <a href="https://christine0916.github.io/">
-                        <img src="https://christine0916.github.io/img/ssdam_thumbnail.png">
+                        <img src="./img/ssdam_thumbnail.png">
                     </a>
                 </li>
                 <li class="card">
                     <a href="https://christine0916.github.io/">
-                        <img src="https://christine0916.github.io/img/six_thumbnail.png">
+                        <img src="./img/six_thumbnail.png">
                     </a>
                 </li>
                 <li class="card">
                     <a href="https://christine0916.github.io/">
-                        <img src="https://christine0916.github.io/img/hellopay_thumbnail.png">
+                        <img src="./img/hellopay_thumbnail.png">
                     </a>
                 </li>
                 <li class="card">
                     <a href="https://christine0916.github.io/">
-                        <img src="https://christine0916.github.io/img/hellomarket_renewal_1.png">
+                        <img src="./img/hellomarket_renewal_1.png">
                     </a>
                 </li>
             </ul>
