--- a/contact.html
+++ b/contact.html
@@ -129,12 +129,13 @@
         </div>
         <nav id="site-navigation" class="main-navigation" role="navigation">
                 <ul class="nav navbar-nav navbar-right">
-                    <li><a href="/about">About</a></li>
-                    <li><a href="https://christine0916.github.io/">Work</a></li>
-                    <li><a href="/contact">Contact</a></li>
+                    <li class="menu"><a href="https://christine0916.github.io/about">About</a></li>
+                    <li class="menu"><a href="https://christine0916.github.io/">Work</a></li>
+                    <li class="menu"><a href="https://christine0916.github.io/contact">Contact</a></li>
                 </ul>
         </nav>
     </header>
+
     <div class="container">
         <div class="group">
             <div class="title-text first">
