--- a/about.html
+++ b/about.html
@@ -122,21 +122,21 @@
 </head>
 <body>
 
-    <header id="header" role="banner">
-        <div class="logo">
-            <a href="https://christine0916.github.io/" rel="home">
-                <p class="site-title">Yoon Hyun Jin</p>
-            </a>
-        </div>
-        <nav id="site-navigation" class="main-navigation" role="navigation">
-                <ul class="nav navbar-nav navbar-right">
-                    <li class="menu"><a href="https://christine0916.github.io/about">About</a></li>
-                    <li class="menu"><a href="https://christine0916.github.io/">Work</a></li>
-                    <li class="menu"><a href="https://christine0916.github.io/contact">Contact</a></li>
-                </ul>
-        </nav>
-    </header>
-    
+        <header id="header" role="banner">
+            <div class="logo">
+                <a href="https://christine0916.github.io/" rel="home">
+                    <p class="site-title">Yoon Hyun Jin</p>
+                </a>
+            </div>
+            <nav id="site-navigation" class="main-navigation" role="navigation">
+                    <ul class="nav navbar-nav navbar-right">
+                        <li class="menu"><a href="./about">About</a></li>
+                        <li class="menu"><a href="./index">Work</a></li>
+                        <li class="menu"><a href="./contact">Contact</a></li>
+                    </ul>
+            </nav>
+        </header>
+
     <div class="container">
         <div class="group">
             <div class="title-text first">
