--- a/contact.html
+++ b/contact.html
@@ -10,112 +10,8 @@
         <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
         <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
-    <style>
-    body {
-        display: block;
-    }
-    *, *:before, *:after {
-        box-sizing: inherit;
-    }
+    <link rel="stylesheet" href="./css/style.css">
 
-    #columns{
-        max-width: 1185px;
-        margin: 0 auto;
-        min-height: 80vh;
-    }
-
-    ul{
-        text-align: center;
-        margin-top: 100px;
-        -webkit-padding-start: 0px;
-    }
-
-    li.card{
-        display: inline-block;
-        width: 350px;
-        margin: 20px;
-        box-shadow: 0 20px 20px rgba(0,0,0,.1);
-        transition: all 250ms cubic-bezier(.02, .01, .47, 1);
-    }
-    img {
-        width: 100%;
-        vertical-align: top;
-    }
-    .card:hover{
-        box-shadow: 0 40px 40px rgba(0,0,0,.16);
-        transform: translate(0,-20px);
-        transition-delay: 0s !important;
-    }
-
-    #header {
-        display: flex;
-        position: fixed;
-        top: 0;
-        left: 0;
-        right: 0;
-        width: 100%;
-        max-width: 1200px;
-        margin: 0 auto;
-        padding: 0 2rem;
-        height: 4rem;
-        z-index: 5;
-        background-color: white;
-        padding: 20px;
-    }
-    #header .logo {
-        flex-grow: 1;
-    }
-    #header .logo .a{
-        display: inline-block;
-        padding: 0 1rem;
-        margin-left: -1rem;
-        text-decoration: none;
-        border: none;
-        display: inline-block;
-        line-height: 4rem;
-        height: 4rem;
-        overflow: hidden;
-        margin: 0;
-    }
-    #header .site-title {
-        display: inline-block;
-        line-height: 4rem;
-        height: 4rem;
-        overflow: hidden;
-        margin: 0;
-        color: black
-    }
-    .main-navigation {
-        flex-grow: 1;
-        text-align: right;
-        color: black;
-    }
-    .menu {
-        color: black;
-    }
-    .title-text{
-        font-size: 24px;
-        color: black;
-        font-weight: 500;
-        margin-bottom: 5px;
-    }
-    .sub-text{
-        font-size: 14px;
-        color: black;
-        font-weight: 400;
-        line-height: 30px;
-    }
-    .container{
-        max-width: 1185px;
-        margin-top: 100px;
-        padding-left: 30px;
-    }
-    .group{
-        padding-top: 20px;
-    }
-
-
-    </style>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/js/bootstrap.min.js"></script>
 </head>
@@ -128,9 +24,9 @@
         </div>
         <nav id="site-navigation" class="main-navigation" role="navigation">
                 <ul class="nav navbar-nav navbar-right">
-                    <li class="menu"><a href="./about">About</a></li>
-                    <li class="menu"><a href="./index">Work</a></li>
-                    <li class="menu"><a href="./contact">Contact</a></li>
+                    <li class="menu"><a href="./about.html">About</a></li>
+                    <li class="menu"><a href="./index.html">Work</a></li>
+                    <li class="menu"><a href="./contact.html">Contact</a></li>
                 </ul>
         </nav>
     </header>
