상세페이지추가
카드 2번째까지 추가

--- a/card_2.html
+++ b/card_2.html
@@ -20,7 +20,7 @@
         <div class="logo">
             <a href="https://christine0916.github.io/" rel="home">
                 <p class="site-title">Yoon Hyun Jin</p>
-			</a>
+            </a>
         </div>
         <nav id="site-navigation" class="main-navigation" role="navigation">
                 <ul class="nav navbar-nav navbar-right">
@@ -31,41 +31,14 @@
         </nav>
     </header>
 
-        <div id="columns">
-            <ul>
-                <li class="card">
-                    <a href="./card_1.html">
-                        <img src="./img/ray_willy_mory.png">
-                    </a>
-                </li>
-                <li class="card">
-                    <a href="./card_2.html">
-                        <img src="./img/ssdam_illust_thumbnail.png">
-                    </a>
-                </li>
-                <li class="card">
-                    <a href="https://christine0916.github.io/">
-                        <img src="./img/ssdam_thumbnail.png">
-                    </a>
-                </li>
-                <li class="card">
-                    <a href="https://christine0916.github.io/">
-                        <img src="./img/six_thumbnail.png">
-                    </a>
-                </li>
-                <li class="card">
-                    <a href="https://christine0916.github.io/">
-                        <img src="./img/hellopay_thumbnail.png">
-                    </a>
-                </li>
-                <li class="card">
-                    <a href="https://christine0916.github.io/">
-                        <img src="./img/hellomarket_renewal_thumbnail.png">
-                    </a>
-                </li>
-            </ul>
-
+    <div class="container">
+        <div class="contents-title">
+            반려동물용품 소셜리뷰 SNS 서비스 쓰담 일러스트
         </div>
-
+        <div class="contents-img">
+            <img src="./img/ssdam_illust_thumbnail.png">
+        </div>
+    </div>
+    </div>
 </body>
 </html>
