이미지 스타일 수정
width 100% 문제 수정

--- a/card_2.html
+++ b/card_2.html
@@ -36,7 +36,7 @@
             반려동물용품 소셜리뷰 SNS 서비스 쓰담 일러스트
         </div>
         <div class="contents-img">
-            <img src="./img/ssdam_illust_thumbnail.png">
+            <img src="./img/ssdam_illust.png">
         </div>
     </div>
     </div>
