--- a/index.html
+++ b/index.html
@@ -35,32 +35,32 @@
             <ul>
                 <li class="card">
                     <a href="./card_1.html">
-                        <img src="./img/ray_willy_mory.png">
+                        <img src="./img/ray_willy_mory.png" class="card-img">
                     </a>
                 </li>
                 <li class="card">
                     <a href="./card_2.html">
-                        <img src="./img/ssdam_illust_thumbnail.png">
+                        <img src="./img/ssdam_illust_thumbnail.png" class="card-img">
                     </a>
                 </li>
                 <li class="card">
                     <a href="https://christine0916.github.io/">
-                        <img src="./img/ssdam_thumbnail.png">
+                        <img src="./img/ssdam_thumbnail.png" class="card-img">
                     </a>
                 </li>
                 <li class="card">
                     <a href="https://christine0916.github.io/">
-                        <img src="./img/six_thumbnail.png">
+                        <img src="./img/six_thumbnail.png" class="card-img">
                     </a>
                 </li>
                 <li class="card">
                     <a href="https://christine0916.github.io/">
-                        <img src="./img/hellopay_thumbnail.png">
+                        <img src="./img/hellopay_thumbnail.png" class="card-img">
                     </a>
                 </li>
                 <li class="card">
                     <a href="https://christine0916.github.io/">
-                        <img src="./img/hellomarket_renewal_thumbnail.png">
+                        <img src="./img/hellomarket_renewal_thumbnail.png" class="card-img">
                     </a>
                 </li>
             </ul>
