인덱스,컨텐츠 추가

--- a/card_hellopay.html
+++ b/card_hellopay.html
@@ -32,13 +32,13 @@
     </header>
 
     <div class="container">
+        <div class="contents-list">
+            <img src="./img/hellopay_1.png" class="contents-detail">
+            <img src="./img/hellopay_2.png" class="contents-detail">
+        </div>
         <div class="contents-title">
-            반려동물용품 소셜리뷰 SNS 서비스 쓰담 일러스트
+            헬로마켓 어플 내부 서비스 간편결제 시스템 디자인.2016
         </div>
-        <div class="contents-img">
-            <img src="./img/ssdam_illust.png">
-        </div>
-    </div>
     </div>
 </body>
 </html>
