--- a/card_ssdam-illust.html
+++ b/card_ssdam-illust.html
@@ -32,11 +32,11 @@
     </header>
 
     <div class="container">
-        <div class="contents-title">
-            크리스마스 기념 일러스트
-        </div>
         <div class="contents-img">
-            <img src="./img/ray_willy_mory.png" style="width: 50%;">
+            <img src="./img/ssdam_illust.png">
+        </div>
+        <div class="contents-title">
+            반려동물용품 소셜리뷰 SNS 서비스 쓰담 일러스트
         </div>
     </div>
     </div>
