--- a/index.html
+++ b/index.html
@@ -34,33 +34,43 @@
         <div id="columns">
             <ul>
                 <li class="card">
-                    <a href="./card_1.html">
+                    <a href="./card_christmas.html">
                         <img src="./img/ray_willy_mory.png" class="card-img">
                     </a>
                 </li>
                 <li class="card">
-                    <a href="./card_2.html">
+                    <a href="./card_ssdam-illust.html">
                         <img src="./img/ssdam_illust_thumbnail.png" class="card-img">
                     </a>
                 </li>
                 <li class="card">
-                    <a href="https://christine0916.github.io/">
+                    <a href="./card_ssdam.html">
                         <img src="./img/ssdam_thumbnail.png" class="card-img">
                     </a>
                 </li>
                 <li class="card">
-                    <a href="https://christine0916.github.io/">
+                    <a href="./card_6ix.html">
                         <img src="./img/six_thumbnail.png" class="card-img">
                     </a>
                 </li>
                 <li class="card">
-                    <a href="https://christine0916.github.io/">
+                    <a href="./card_hellopay.html">
                         <img src="./img/hellopay_thumbnail.png" class="card-img">
                     </a>
                 </li>
                 <li class="card">
-                    <a href="https://christine0916.github.io/">
+                    <a href="./card_rehellomarket.html">
                         <img src="./img/hellomarket_renewal_thumbnail.png" class="card-img">
+                    </a>
+                </li>
+                <li class="card">
+                    <a href="https://christine0916.github.io/">
+                        <img src="./img/hellomarket_thubmail.png" class="card-img">
+                    </a>
+                </li>
+                <li class="card">
+                    <a href="https://christine0916.github.io/">
+                        <img src="./img/simkoong_thumbnail.png" class="card-img">
                     </a>
                 </li>
             </ul>
