심쿵,헬로마켓,숨고 추가

--- a/index.html
+++ b/index.html
@@ -34,6 +34,11 @@
         <div id="columns">
             <ul>
                 <li class="card">
+                    <a href="./card_soomgo.html">
+                        <img src="./img/soomgo_thumbnail.png" class="card-img">
+                    </a>
+                </li>
+                <li class="card">
                     <a href="./card_christmas.html">
                         <img src="./img/ray_willy_mory.png" class="card-img">
                     </a>
@@ -64,12 +69,12 @@
                     </a>
                 </li>
                 <li class="card">
-                    <a href="https://christine0916.github.io/">
+                    <a href="./card_hellomarket.html">
                         <img src="./img/hellomarket_thubmail.png" class="card-img">
                     </a>
                 </li>
                 <li class="card">
-                    <a href="https://christine0916.github.io/">
+                    <a href="./card_simkoong.html">
                         <img src="./img/simkoong_thumbnail.png" class="card-img">
                     </a>
                 </li>
