--- a/card_simkoong.html
+++ b/card_simkoong.html
@@ -41,7 +41,10 @@
         </div>
         <div class="contents-title">
             심쿵 Android 어플 디자인.2015
-            https://play.google.com/store/apps/details?id=com.colondee.simkoong3
+            </br>
+            <a href="https://play.google.com/store/apps/details?id=com.colondee.simkoong3">
+            download</a>
+
         </div>
     </div>
 </body>
