--- a/card_soomgo.html
+++ b/card_soomgo.html
@@ -42,7 +42,9 @@
         </div>
         <div class="contents-title">
             숨고 어플 디자인.2017
-            https://play.google.com/store/apps/details?id=com.soomgo
+            <br>
+            <a href="https://play.google.com/store/apps/details?id=com.soomgo">
+            download</a>
         </div>
     </div>
 </body>
