--- a/card_ssdam.html
+++ b/card_ssdam.html
@@ -45,7 +45,9 @@
 
         <div class="contents-title">
             반려동물용품 소셜리뷰 SNS 서비스 쓰담 웹/모바일웹 랜딩페이지.2016
-            http://www.ssdam.pet/
+            <br>
+            <a href="http://www.ssdam.pet/">
+            webpage</a>
         </div>
     </div>
 </body>
