이미지 태그 수정
기존 이미지 태그 신규태그로 수정

--- a/card_christmas.html
+++ b/card_christmas.html
@@ -32,8 +32,8 @@
     </header>
 
     <div class="container">
-        <div class="contents-lisd">
-            <img src="./img/ray_willy_mory.png" style="width: 50%;">
+        <div class="contents-list">
+            <img src="./img/ray_willy_mory.png" class="contents-detail">
         </div>
         <div class="contents-title">
             크리스마스 기념 일러스트.2016
