--- a/card_ssdam-illust.html
+++ b/card_ssdam-illust.html
@@ -32,8 +32,8 @@
     </header>
 
     <div class="container">
-        <div class="contents-img">
-            <img src="./img/ssdam_illust.png">
+        <div class="contents-list">
+            <img src="./img/ssdam_illust.png" class="contents-detail">
         </div>
         <div class="contents-title">
             반려동물용품 소셜리뷰 SNS 서비스 쓰담 일러스트
