--- a/card_soomgo.html
+++ b/card_soomgo.html
@@ -44,7 +44,8 @@
             숨고 어플 디자인.2017
             <br>
             <a href="https://play.google.com/store/apps/details?id=com.soomgo">
-            download</a>
+            download
+            </a>
         </div>
     </div>
 </body>
