illustration part menu and image file add
illustration of menu has updated

--- a/card_6ix.html
+++ b/card_6ix.html
@@ -25,7 +25,8 @@
         <nav id="site-navigation" class="main-navigation" role="navigation">
                 <ul class="nav navbar-nav navbar-right">
                     <li class="menu"><a href="./about.html">About</a></li>
-                    <li class="menu"><a href="./index.html">Work</a></li>
+                    <li class="menu"><a href="./index.html">Work-UI</a></li>
+                    <li class="menu"><a href="./work2.html">Work-Illustraion</a></li>
                     <li class="menu"><a href="./contact.html">Contact</a></li>
                 </ul>
         </nav>
@@ -39,7 +40,7 @@
             <img src="./img/six_4.png" class="contents-detail">
         </div>
         <div class="contents-title">
-            믿을 수 있는 사람들과의 SNS 6IX 서비스 어플 디자인.2016
+            믿을 수 있는 사람들과의 SNS 6IX 서비스 어플 디자인<br>2016
         </div>
     </div>
     </div>
