--- a/card_rehellomarket.html
+++ b/card_rehellomarket.html
@@ -25,8 +25,9 @@
         <nav id="site-navigation" class="main-navigation" role="navigation">
                 <ul class="nav navbar-nav navbar-right">
                     <li class="menu"><a href="./about.html">About</a></li>
-                    <li class="menu"><a href="./index.html">Work</a></li>
-                    <li class="menu"><a href="./contact.html">Contact</a></li>
+                    <li class="menu"><a href="./index.html">Work-UI</a></li>
+                    <li class="menu"><a href="./work2.html">Work-Illustraion</a></li>
+<li class="menu"><a href="./contact.html">Contact</a></li>
                 </ul>
         </nav>
     </header>
@@ -38,7 +39,7 @@
             <img src="./img/hellomarket_renewal_3.png" class="contents-detail">
         </div>
         <div class="contents-title">
-            개인프로젝트 헬로마켓 어플 디자인 리뉴얼.2016
+            개인프로젝트 헬로마켓 어플 디자인 리뉴얼<br>2016
         </div>
     </div>
 </body>
