--- a/card_simkoong.html
+++ b/card_simkoong.html
@@ -25,8 +25,9 @@
         <nav id="site-navigation" class="main-navigation" role="navigation">
                 <ul class="nav navbar-nav navbar-right">
                     <li class="menu"><a href="./about.html">About</a></li>
-                    <li class="menu"><a href="./index.html">Work</a></li>
-                    <li class="menu"><a href="./contact.html">Contact</a></li>
+                    <li class="menu"><a href="./index.html">Work-UI</a></li>
+                    <li class="menu"><a href="./work2.html">Work-Illustraion</a></li>
+<li class="menu"><a href="./contact.html">Contact</a></li>
                 </ul>
         </nav>
     </header>
@@ -40,10 +41,11 @@
             <img src="./img/simkoong_5.png" class="contents-detail">
         </div>
         <div class="contents-title">
-            심쿵 Android 어플 디자인.2015
-            </br>
+            심쿵 Android 어플 디자인
             <a href="https://play.google.com/store/apps/details?id=com.colondee.simkoong3">
             download</a>
+            <br>
+            2015
 
         </div>
     </div>
