--- a/card_ssdam.html
+++ b/card_ssdam.html
@@ -25,7 +25,8 @@
         <nav id="site-navigation" class="main-navigation" role="navigation">
                 <ul class="nav navbar-nav navbar-right">
                     <li class="menu"><a href="./about.html">About</a></li>
-                    <li class="menu"><a href="./index.html">Work</a></li>
+                    <li class="menu"><a href="./index.html">Work-UI</a></li>
+                    <li class="menu"><a href="./work2.html">Work-Illustraion</a></li>
                     <li class="menu"><a href="./contact.html">Contact</a></li>
                 </ul>
         </nav>
@@ -44,10 +45,12 @@
         </div>
 
         <div class="contents-title">
-            반려동물용품 소셜리뷰 SNS 서비스 쓰담 웹/모바일웹 랜딩페이지.2016
+            반려동물용품 소셜리뷰 SNS 서비스 쓰담 웹/모바일웹 랜딩페이지
             <br>
             <a href="http://www.ssdam.pet/">
             webpage</a>
+            <br>
+            2016
         </div>
     </div>
 </body>
