--- a/index.html
+++ b/index.html
@@ -25,7 +25,8 @@
         <nav id="site-navigation" class="main-navigation" role="navigation">
                 <ul class="nav navbar-nav navbar-right">
                     <li class="menu"><a href="./about.html">About</a></li>
-                    <li class="menu"><a href="./index.html">Work</a></li>
+                    <li class="menu"><a href="./index.html">Work-UI</a></li>
+                    <li class="menu"><a href="./work2.html">Work-Illustraion</a></li>
                     <li class="menu"><a href="./contact.html">Contact</a></li>
                 </ul>
         </nav>
@@ -33,19 +34,14 @@
 
         <div id="columns">
             <ul>
+              <li class="card">
+                  <a href="./card_soomgo_app_webpage.html">
+                      <img src="./img/appdownpage_thumbnail.png" class="card-img">
+                  </a>
+              </li>
                 <li class="card">
                     <a href="./card_soomgo.html">
                         <img src="./img/soomgo_thumbnail.png" class="card-img">
-                    </a>
-                </li>
-                <li class="card">
-                    <a href="./card_christmas.html">
-                        <img src="./img/ray_willy_mory.png" class="card-img">
-                    </a>
-                </li>
-                <li class="card">
-                    <a href="./card_ssdam-illust.html">
-                        <img src="./img/ssdam_illust_thumbnail.png" class="card-img">
                     </a>
                 </li>
                 <li class="card">
