--- a/card_christmas.html
+++ b/card_christmas.html
@@ -25,8 +25,9 @@
         <nav id="site-navigation" class="main-navigation" role="navigation">
                 <ul class="nav navbar-nav navbar-right">
                     <li class="menu"><a href="./about.html">About</a></li>
-                    <li class="menu"><a href="./index.html">Work</a></li>
-                    <li class="menu"><a href="./contact.html">Contact</a></li>
+                    <li class="menu"><a href="./index.html">Work-UI</a></li>
+                    <li class="menu"><a href="./work2.html">Work-Illustraion</a></li>
+<li class="menu"><a href="./contact.html">Contact</a></li>
                 </ul>
         </nav>
     </header>
@@ -36,7 +37,7 @@
             <img src="./img/ray_willy_mory.png" class="contents-detail">
         </div>
         <div class="contents-title">
-            크리스마스 기념 일러스트.2016
+            크리스마스 기념 일러스트<br>2016
         </div>
     </div>
     </div>
