--- a/card_hellomarket.html
+++ b/card_hellomarket.html
@@ -25,8 +25,9 @@
         <nav id="site-navigation" class="main-navigation" role="navigation">
                 <ul class="nav navbar-nav navbar-right">
                     <li class="menu"><a href="./about.html">About</a></li>
-                    <li class="menu"><a href="./index.html">Work</a></li>
-                    <li class="menu"><a href="./contact.html">Contact</a></li>
+                    <li class="menu"><a href="./index.html">Work-UI</a></li>
+                    <li class="menu"><a href="./work2.html">Work-Illustraion</a></li>
+<li class="menu"><a href="./contact.html">Contact</a></li>
                 </ul>
         </nav>
     </header>
@@ -39,7 +40,7 @@
             <img src="./img/hellomarket_4.png" class="contents-detail">
         </div>
         <div class="contents-title">
-            헬로마켓 iOS 어플 디자인.2015
+            헬로마켓 iOS 어플 디자인<br>2015
         </div>
     </div>
 </body>
