--- a/card_hellopay.html
+++ b/card_hellopay.html
@@ -25,8 +25,9 @@
         <nav id="site-navigation" class="main-navigation" role="navigation">
                 <ul class="nav navbar-nav navbar-right">
                     <li class="menu"><a href="./about.html">About</a></li>
-                    <li class="menu"><a href="./index.html">Work</a></li>
-                    <li class="menu"><a href="./contact.html">Contact</a></li>
+                    <li class="menu"><a href="./index.html">Work-UI</a></li>
+                    <li class="menu"><a href="./work2.html">Work-Illustraion</a></li>
+<li class="menu"><a href="./contact.html">Contact</a></li>
                 </ul>
         </nav>
     </header>
@@ -37,7 +38,7 @@
             <img src="./img/hellopay_2.png" class="contents-detail">
         </div>
         <div class="contents-title">
-            헬로마켓 어플 내부 서비스 간편결제 시스템 디자인.2016
+            헬로마켓 어플 내부 서비스 간편결제 시스템 디자인<br>2016
         </div>
     </div>
 </body>
