--- a/card_soomgo.html
+++ b/card_soomgo.html
@@ -25,8 +25,9 @@
         <nav id="site-navigation" class="main-navigation" role="navigation">
                 <ul class="nav navbar-nav navbar-right">
                     <li class="menu"><a href="./about.html">About</a></li>
-                    <li class="menu"><a href="./index.html">Work</a></li>
-                    <li class="menu"><a href="./contact.html">Contact</a></li>
+                    <li class="menu"><a href="./index.html">Work-UI</a></li>
+                    <li class="menu"><a href="./work2.html">Work-Illustraion</a></li>
+<li class="menu"><a href="./contact.html">Contact</a></li>
                 </ul>
         </nav>
     </header>
@@ -41,11 +42,12 @@
             <img src="./img/soomgo_6.png" class="contents-detail">
         </div>
         <div class="contents-title">
-            숨고 어플 디자인.2017
+            숨고 어플 디자인
             <br>
             <a href="https://play.google.com/store/apps/details?id=com.soomgo">
             download
-            </a>
+          </a>
+          <br>2016
         </div>
     </div>
 </body>
