--- a/contact.html
+++ b/contact.html
@@ -25,7 +25,8 @@
         <nav id="site-navigation" class="main-navigation" role="navigation">
                 <ul class="nav navbar-nav navbar-right">
                     <li class="menu"><a href="./about.html">About</a></li>
-                    <li class="menu"><a href="./index.html">Work</a></li>
+                    <li class="menu"><a href="./index.html">Work-UI</a></li>
+                    <li class="menu"><a href="./work2.html">Work-Illustraion</a></li>
                     <li class="menu"><a href="./contact.html">Contact</a></li>
                 </ul>
         </nav>
