thumbnail, illustbook image width has changed

--- a/card_illustbook.html
+++ b/card_illustbook.html
@@ -34,8 +34,8 @@
 
     <div class="container">
         <div class="contents-list">
-            <img src="./img/e2b9f00cbe9fd79603e83bc117b87240.png" class="contents-detail">
-            <img src="./img/352b466e6dc2cc7239f6d21d57a69c66.png" class="contents-detail">
+            <img src="./img/e2b9f00cbe9fd79603e83bc117b87240.png" class="contents-detail" style="width: 50%;">
+            <img src="./img/352b466e6dc2cc7239f6d21d57a69c66.png" class="contents-detail" style="width: 50%;">
             <img src="./img/illustbook1.png" class="contents-detail">
         </div>
         <div class="contents-title">
